# token-counter

./: .gitignore  HOMEBREW_SETUP.md  PLAN.md  README.md  RELEASING.md  homebrew-formula.rb  pyproject.toml  test_article.txt  token-counter-cli.rb
.github/workflows/: release.yml
scripts/: release.py
src/token_counter/: cli.py  counter.py  llm_limits.json  main.py
tests/: __init__.py
